--- a/package.json
+++ b/package.json
@@ -3,13 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-aria/color": "^3.0.0-beta.12",
+    "@react-aria/dialog": "^3.2.0",
+    "@react-aria/focus": "^3.6.0",
+    "@react-aria/interactions": "^3.9.0",
+    "@react-aria/overlays": "^3.9.0",
+    "@react-aria/searchfield": "^3.3.0",
+    "@react-aria/slider": "^3.1.0",
+    "@react-aria/textfield": "^3.6.0",
+    "@react-aria/visually-hidden": "^3.3.0",
+    "@react-spring/web": "^9.4.5",
+    "@react-stately/color": "^3.0.0-beta.11",
+    "@react-stately/slider": "^3.1.0",
     "@testing-library/jest-dom": "5.16.2",
     "@testing-library/react": "12.1.2",
     "@testing-library/user-event": "13.5.0",
+    "@types/jest": "^28.1.1",
+    "@types/node": "^17.0.41",
+    "@types/react": "^18.0.12",
+    "@types/react-dom": "^18.0.5",
     "nodemon": "^2.0.15",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-scripts": "5.0.0"
+    "react-scripts": "5.0.0",
+    "typescript": "^4.7.3"
   },
   "proxy": "http://localhost:5000/",
   "scripts": {
